# torch-mesmer

./: .gitignore  LICENSE  README.md  Untitled.ipynb  applications.py  backbone_utils.py  deep_watershed.py  evaluate.py  experiment_mesmer.ipynb  fpn.py  fpn_utils.py  iter_cropping.py  layers.py  loss_utils.py  mesmer.py  model_utils.py  panoptic.py  pyproject.toml  requirements.txt  sanity.ipynb  setup.ipynb  temp_applications.py  temp_deep_watershed.py  temp_eval_mesmer.ipynb  temp_evaluate_mesmer.ipynb  temp_evaluate_mesmer.py  temp_fpn.py  temp_fpn_orig.py  temp_iter_cropping.py  temp_iter_semantic.py  temp_mesmer.py  temp_panoptic.py  temp_panoptic_orig.py  temp_train_mesmer.ipynb  temp_train_mesmer.py  temp_train_mesmer_limited.ipynb  test_mesmer.ipynb  test_mesmer.py  test_mesmer_orig.ipynb  toolbox_utils.py  (+5 more)
.github/workflows/: test.yml
examples/: evaluate.py  plot_predict.py  train.py  train_ddp.py  train_torch.py  train_torch_ddp.py
notebooks/: iter_rough.ipynb  setup.ipynb  test_mesmer.ipynb
torch-mesmer/: loaders.py  loss.py  mesmer.py  metrics.py  model.py  modules.py  postprocess_utils.py  preprocess.py  train.py  transforms.py  utils.py
torch_mesmer/: applications.py  augmentation.py  backbone_utils.py  backbone_utils_test.py  deep_watershed.py  deep_watershed_test.py  eval.py  eval_dnn.py  evaluate.py  evaluate_utils.py  file_utils.py  fpn.py  geometry_utils.py  iter_cropping.py  iter_semantic.py  layers.py  layers_test.py  loader_utils.py  loaders.py  loss.py  loss_utils.py  loss_utils_test.py  mask_utils.py  mask_utils_test.py  mesmer.py  mesmer_test.py  metrics.py  model.py  model_utils.py  modules.py  panoptic.py  panoptic_test.py  postprocess_sweep.py  postprocess_utils.py  preprocess.py  test_mesmer.py  toolbox_processing.py  toolbox_processing_test.py  toolbox_utils.py  toolbox_utils_test.py  (+7 more)
torch_mesmer/torch-mesmer/: eval.py  modules.py
